--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         </div>
         <div id="education" class="categorySelection">
             <span><i class="fa fa-graduation-cap"></i></span>
-            <span class="aboutMe">Education</span>
+            <span class="categoryName">Education</span>
         </div>
         <div id="extracur" class="categorySelection">
             <span class="material-icons"><i class="fa fa-globe" aria-hidden="true"></i></span>
-            <span class="aboutMe">Extracurricular</span>
+            <span class="categoryName">Extracurricular</span>
         </div>
         <div id="aboutMe" class="categorySelection">
             <span class="material-icons">person</span>
-            <span class="aboutMe">About Me</span>
+            <span class="categoryName">About Me</span>
         </div>
         <hr>
         <!--
