--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <Title>Badih Chehab - Resume</Title>
     <script src="./index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
