--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <Title>Badih Chehab - Resume</Title>
+    <Title>Badih Chehab Resume</Title>
     <script src="./index.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="index.css">
@@ -13,31 +13,30 @@
     <div id="sideBar" class="sideBar" >
         <h2>Resume</h2>
         <hr>
-        <div id="home" class="categorySelection">
+        <div id="home" class="categorySelection" style="--order: 1">
             <span class="material-icons">home</span>
             <span class="categoryName">Home</span>
         </div>
-        <div id="academicProj" class="categorySelection">
+        <div id="academicProj" class="categorySelection" style="--order: 2">
             <span class="material-icons">edit</span>
             <span class="categoryName">Academic Projects</span>
         </div>
-        <div id="workExp" class="categorySelection">
+        <div id="workExp" class="categorySelection" style="--order: 3">
             <span class="material-icons">work</span>
             <span class="categoryName">Work Experience</span>
         </div>
-        <div id="education" class="categorySelection">
+        <div id="education" class="categorySelection" style="--order: 4">
             <span><i class="fa fa-graduation-cap"></i></span>
             <span class="categoryName">Education</span>
         </div>
-        <div id="extracur" class="categorySelection">
+        <div id="extracur" class="categorySelection" style="--order: 5">
             <span class="material-icons"><i class="fa fa-globe" aria-hidden="true"></i></span>
             <span class="categoryName">Extracurricular</span>
         </div>
-        <div id="aboutMe" class="categorySelection">
+        <div id="aboutMe" class="categorySelection" style="--order: 6">
             <span class="material-icons">person</span>
             <span class="categoryName">About Me</span>
         </div>
-        <hr>
         <!--
         <h4 style="margin-left: 8px;">Contact Info</h4>
         <div id="email" class="contactInfo">
@@ -78,23 +77,23 @@
                     <h1>Jump In</h1>
                     <hr>
                     <div class="featured">
-                        <div name="academicProj" class="feature">
+                        <div name="academicProj" class="feature"  style="--order: 1">
                             <img src="./academics-01-01.png" alt="">
                             <h3>Academic Projects</h3>
                         </div>
-                        <div name="workExp" class="feature">
+                        <div name="workExp" class="feature" style="--order: 2">
                             <img src="./workExp-01.png" alt="">
                             <h3>Work Experience</h3>
                         </div>
-                        <div name="education" class="feature">
+                        <div name="education" class="feature" style="--order: 3">
                             <img src="./education-01.png" alt="">
                             <h3>Education</h3>
                         </div>
-                        <div name="extracur" class="feature">
+                        <div name="extracur" class="feature" style="--order: 4">
                             <img src="./extra-01.png" alt="">
                             <h3>Extracurricular Activities</h3>
                         </div>
-                        <div name="aboutMe" class="feature">
+                        <div name="aboutMe" class="feature" style="--order: 5">
                             <img src="./person-01.png" alt="">
                             <h3>About Me</h3>
                         </div>
@@ -239,12 +238,12 @@
                 <div class="user">
                     <img src="./BGC_8868.JPG" alt="my  picture">
                     <div class="info">
-                        <span>Badih Chehab</span><br>
-                        <span>BE in Computer and Communications Engineering</span><br>
+                        <span class="myName">Badih Chehab</span><br>
+                        <span class="myMajor">BE in Computer and Communications Engineering</span><br>
                         <span class="contactDetails">Email: badihchehab@yahoo.com</span>
                         <span class="contactDetails">|</span>
                         <span class="contactDetails">Phone: +961 71 343 952</span>
-                        <br>
+                        <span class="contactDetails">|</span>
                         <a href="https://www.linkedin.com/in/badihchehab/" target="_blank">
                             <img class="linkedinLink" src="https://pngimg.com/uploads/linkedIn/linkedIn_PNG22.png" alt="">
                         </a>
